syntax = "proto3";
option go_package = "pkg/structs";

import "common.proto";
import "errors.proto";

message Change {
    string World = 1; // world this change occurs in
    string Key = 2; // key designating the object type this represents (eg. actor, faction)
    string Type = 3; // type; a subtype so objects can have custom controllers
    string Id = 4; // object id
}

message OnChangeRequest {
    Change Data = 1;
    string Queue = 2;
}

message OnChangeResponse {
    Change Data = 1;
    string Ack = 2;
    optional Error Error = 3;
}

message DeferChangeRequest {
    Change Data = 1; // world, key and Id are required

    // one of these is required
    optional uint64 ToTick = 2; // The tick to defer the change to
    optional uint64 ByTick = 3; // The tick to defer the change by, short hand for "ToTick=World.Tick+ByTick"
}

message DeferChangeResponse {
    optional Error Error = 2;
}

message AckRequest {
    repeated string Ack = 1;
}

message AckResponse {
    optional Error Error = 1;
}
